<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>io.github.yilers</groupId>
        <artifactId>upm</artifactId>
        <version>${revision}</version>
    </parent>

    <artifactId>upm-core</artifactId>

    <properties>
        <maven.compiler.source>25</maven.compiler.source>
        <maven.compiler.target>25</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <!-- 构建时间 -->
        <maven.build.timestamp.format>yyyy-MM-dd HH:mm:ss</maven.build.timestamp.format>
        <javacv.version>1.5.10</javacv.version>

<!--        <javacv.platform.macosx-arm64>macosx-arm64</javacv.platform.macosx-arm64>-->
<!--        <javacv.platform.linux-x86_64>linux-x86_64</javacv.platform.linux-x86_64>-->
<!--        <javacv.platform.linux-arm64>linux-arm64</javacv.platform.linux-arm64>-->
<!--        <javacv.platform.windows-x86_64>windows-x86_64</javacv.platform.windows-x86_64>-->


<!--        <djl.platform.windows-x86_64>win-x86_64</djl.platform.windows-x86_64>-->
<!--        <djl.platform.linux-x86_64>linux-x86_64</djl.platform.linux-x86_64>-->
<!--        <djl.platform.linux-aarch64>linux-aarch64</djl.platform.linux-aarch64>-->
        <djl.platform.osx-aarch64>osx-aarch64</djl.platform.osx-aarch64>
    </properties>

    <dependencies>
        <dependency>
            <groupId>io.github.yilers</groupId>
            <artifactId>common-auth</artifactId>
            <version>${revision}</version>
        </dependency>
        <dependency>
            <groupId>io.github.yilers</groupId>
            <artifactId>upm-api</artifactId>
            <version>${revision}</version>
        </dependency>

        <dependency>
            <groupId>cn.smartjavaai</groupId>
            <artifactId>ocr</artifactId>
            <version>1.1.1</version>
        </dependency>

        <!--PyTorch离线平台依赖-->
        <dependency>
            <groupId>ai.djl.pytorch</groupId>
            <artifactId>pytorch-native-cpu</artifactId>
            <version>2.1.1</version> <!-- ⚠️ 不要用2.7.1 -->
            <classifier>osx-x86_64</classifier> <!-- ✅ Intel -->
        </dependency>

        <dependency>
            <groupId>ai.djl.pytorch</groupId>
            <artifactId>pytorch-jni</artifactId>
            <version>2.7.1-0.34.0</version>
            <scope>runtime</scope>
        </dependency>

        <!--tensorflow离线平台依赖-->
        <dependency>
            <groupId>ai.djl.tensorflow</groupId>
            <artifactId>tensorflow-native-cpu</artifactId>
            <classifier>osx-x86_64</classifier>
            <scope>runtime</scope>
            <version>2.16.1</version>
        </dependency>

        <!--mxnet离线平台依赖-->
<!--        <dependency>-->
<!--            <groupId>ai.djl.mxnet</groupId>-->
<!--            <artifactId>mxnet-native-mkl</artifactId>-->
<!--            <classifier>${djl.platform.osx-aarch64}</classifier>-->
<!--            <scope>runtime</scope>-->
<!--            <version>1.9.1</version>-->
<!--        </dependency>-->
    </dependencies>

    <build>
        <resources>
            <!-- 1️⃣ 需要过滤的（properties/yml） -->
            <resource>
                <directory>src/main/resources</directory>
                <filtering>true</filtering>
                <includes>
                    <include>**/*.properties</include>
                    <include>**/*.yml</include>
                    <include>**/*.yaml</include>
                </includes>
            </resource>

            <!-- 2️⃣ 不过滤的（二进制） -->
            <resource>
                <directory>src/main/resources</directory>
                <filtering>false</filtering>
                <excludes>
                    <exclude>**/*.properties</exclude>
                    <exclude>**/*.yml</exclude>
                    <exclude>**/*.yaml</exclude>
                </excludes>
            </resource>
        </resources>

        <plugins>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <compilerArgs>
                        <arg>-parameters</arg>
                    </compilerArgs>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>